--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,29 +11,18 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="{{ "/css/home.css" | relative_url }}">
   </head>
   <body>
-    <header class="header">
-  <nav>
-    <div class="title">Bits and Bytes</div>
-  </nav>
-</header>
-
+    {% include header.html %}
     <ul>
-      
+      {% for post in site.posts %}
       <li>
         <div>
-          <div><a href="/2021/06/05/rust-cargo.html">Rust programming #2 | Cargo and Rust variables</a></div>
+          <div><a href="{{ post.url }}">{{ post.title }}</a></div>
         </div>
       </li>
-      
-      <li>
-        <div>
-          <div><a href="/jekyll/update/2021/06/04/welcome-to-jekyll.html">Welcome to Jekyll!</a></div>
-        </div>
-      </li>
-      
+      {% endfor %}
     </ul>
   </body>
 </html>
