Update post card

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,11 @@
 <header class="header">
   <nav>
-    <div class="title">Bits and Bytes</div>
+    <div class="nav-wrap">
+      <div class="links">
+        <a href="https://www.youtube.com/channel/UC4w12aiYyyYGqFzIkBlHlBQ" target="_blank">YouTube</a>
+        <a href="https://github.com/bits-and-bytes-videos">GitHub</a>
+      </div>
+      <div class="title">Bits and Bytes</div>
+    </div>
   </nav>
 </header>
