--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,14 +15,18 @@
   </head>
   <body>
     {% include header.html %}
-    <ul>
+    <div class="post-wrap">
       {% for post in site.posts %}
-      <li>
-        <div>
-          <div><a href="{{ post.url }}">{{ post.title }}</a></div>
+      <div class="post">
+        <div class="title"><a href="{{ post.url }}">{{ post.title }}</a></div>
+        <div class="description">{{post.description}}</div>
+        <div class="tags">
+          {% for tag in post.tags %}
+          <span>{{tag}}</span>
+          {% endfor %}
         </div>
-      </li>
+      </div>
       {% endfor %}
-    </ul>
+    </div>
   </body>
 </html>
