--- a/docs/css/home.css
+++ b/docs/css/home.css
@@ -1,7 +1,21 @@
-.header { border-bottom: 2px solid #3f51b5; background-image: url("/assets/images/home/test.png"); background-size: 100% 100%; height: 25vh; }
-
-.header .title { font-size: 2rem; color: white; padding: 8px; }
-
 html, body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; font-size: 16px; }
+
+.header { border-bottom: 2px solid #3f51b5; background-color: #3f51b5; height: 25vh; }
+
+.nav-wrap { display: flex; flex-direction: column; }
+
+.nav-wrap .links { padding: 16px; text-align: right; }
+
+.nav-wrap .links a { color: white; margin-left: 16px; }
+
+.nav-wrap .title { font-size: 4rem; color: white; padding: 8px; text-align: center; }
+
+.post-wrap { margin: 24px 48px 24px 48px; display: flex; flex-wrap: wrap; }
+
+.post { border: 1px solid #ccc; border-radius: 8px; padding: 1rem; margin: 0 1rem 1rem 0; max-width: 29%; }
+
+.post .title { font-size: 1.3rem; margin-bottom: 1rem; }
+
+.post .description { font-size: 1rem; margin-bottom: 1rem; }
 
 /*# sourceMappingURL=home.css.map */
