Updated post layout

--- a/_includes/min-header.html
+++ b/_includes/min-header.html
@@ -1,11 +1,11 @@
-<header class="header">
+<header class="min-header">
   <nav>
     <div class="nav-wrap">
+      <div class="title">Bits and Bytes</div>
       <div class="links">
         <a href="{{site.youTube}}" target="_blank">YouTube</a>
         <a href="{{site.gitHub}}" target="_blank">GitHub</a>
       </div>
-      <div class="title">Bits and Bytes</div>
     </div>
   </nav>
 </header>
