--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,1 +1,28 @@
-This is test
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>{{page.title}}</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="{{ "/css/post.css" | relative_url }}">
+  </head>
+  <body>
+    {% include min-header.html %}
+
+    <div class="post-wrap">
+      <div class="navigation">test</div>
+      <div class="article">
+        <h1>{{page.title}}</h1>
+        <article>{{content}}</article>
+      </div>
+      <div class="ad">test2</div>
+    </div>
+  </body>
+</html>
