--- a/docs/css/home.css
+++ b/docs/css/home.css
@@ -2,13 +2,13 @@ html, body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; font-size
 
 .header { border-bottom: 2px solid #3f51b5; background-color: #3f51b5; height: 25vh; }
 
-.nav-wrap { display: flex; flex-direction: column; }
+.header .nav-wrap { display: flex; flex-direction: column; }
 
-.nav-wrap .links { padding: 16px; text-align: right; }
+.header .nav-wrap .links { padding: 16px; text-align: right; }
 
-.nav-wrap .links a { color: white; margin-left: 16px; }
+.header .nav-wrap .links a { color: white; margin-left: 16px; }
 
-.nav-wrap .title { font-size: 4rem; color: white; padding: 8px; text-align: center; }
+.header .nav-wrap .title { font-size: 4rem; color: white; padding: 8px; text-align: center; }
 
 .post-wrap { margin: 24px 48px 24px 48px; display: flex; flex-wrap: wrap; }
 
