Update post layout

--- a/_includes/min-header.html
+++ b/_includes/min-header.html
@@ -1,11 +1,11 @@
 <header class="min-header">
-  <nav>
-    <div class="nav-wrap">
-      <div class="title">Bits and Bytes</div>
-      <div class="links">
-        <a href="{{site.youTube}}" target="_blank">YouTube</a>
-        <a href="{{site.gitHub}}" target="_blank">GitHub</a>
-      </div>
+  <nav class="nav-wrap">
+    <div class="title">
+      <a href="/">Bits and Bytes</a>
+    </div>
+    <div class="links">
+      <a href="{{site.youTube}}" target="_blank">YouTube</a>
+      <a href="{{site.gitHub}}" target="_blank">GitHub</a>
     </div>
   </nav>
 </header>
