--- a/_sass/min-header.scss
+++ b/_sass/min-header.scss
@@ -1,7 +1,6 @@
 @import 'color';
 
 .min-header {
-  border-bottom: 2px solid $primary-color;
   background-color: $primary-color;
   height: 48px;
   .nav-wrap {
@@ -9,10 +8,13 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    height: 100%;
     .title {
-      font-size: 1.5rem;
-      color: white;
-      padding: 0.5rem;
+      a {
+        font-size: 1.5rem;
+        color: white;
+        padding: 0.5rem;
+      }
     }
     .links {
       text-align: right;
