--- a/docs/css/home.css
+++ b/docs/css/home.css
@@ -1,5 +1,7 @@
 html, body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; font-size: 16px; }
 
+* { box-sizing: border-box; }
+
 .header { border-bottom: 2px solid #3f51b5; background-color: #3f51b5; height: 25vh; }
 
 .header .nav-wrap { display: flex; flex-direction: column; }
@@ -17,5 +19,3 @@ html, body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; font-size
 .post .title { font-size: 1.3rem; margin-bottom: 1rem; }
 
 .post .description { font-size: 1rem; margin-bottom: 1rem; }
-
-/*# sourceMappingURL=home.css.map */
