--- a/docs/css/post.css
+++ b/docs/css/post.css
@@ -1,19 +1,149 @@
 html, body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; font-size: 16px; }
 
-.min-header { border-bottom: 2px solid #3f51b5; background-color: #3f51b5; height: 48px; }
+* { box-sizing: border-box; }
 
-.min-header .nav-wrap { display: flex; flex-direction: row; justify-content: space-between; align-items: center; }
+.min-header { background-color: #3f51b5; height: 48px; }
 
-.min-header .nav-wrap .title { font-size: 1.5rem; color: white; padding: 0.5rem; }
+.min-header .nav-wrap { display: flex; flex-direction: row; justify-content: space-between; align-items: center; height: 100%; }
+
+.min-header .nav-wrap .title a { font-size: 1.5rem; color: white; padding: 0.5rem; }
 
 .min-header .nav-wrap .links { text-align: right; }
 
 .min-header .nav-wrap .links a { color: white; margin-right: 1rem; }
 
-.post-wrap { display: flex; }
+.post-wrap { display: flex; justify-content: space-between; }
 
-.post-wrap .article { max-width: 800px; }
+.post-wrap .external, .post-wrap .navigation { max-width: 250px; width: 250px; }
+
+.post-wrap .article { max-width: 800px; text-align: justify; }
 
 .post-wrap .article img { width: 100%; }
+
+.post-wrap .article-content { margin-top: 2rem; }
+
+.post-wrap .date-time { font-style: italic; }
+
+.highlight { border-radius: 3px; background: #212121; }
+
+.highlighter-rouge .highlight { background: #212121; }
+
+.highlight .c { color: #545454; font-style: italic; }
+
+.highlight .err { color: #f07178; background-color: #e3d2d2; }
+
+.highlight .k { color: #89ddff; font-weight: bold; }
+
+.highlight .o { font-weight: bold; }
+
+.highlight .cm { color: #545454; font-style: italic; }
+
+.highlight .cp { color: #545454; font-weight: bold; }
+
+.highlight .c1 { color: #545454; font-style: italic; }
+
+.highlight .cs { color: #545454; font-weight: bold; font-style: italic; }
+
+.highlight .gd { color: #000; background-color: #fdd; }
+
+.highlight .gd .x { color: #000; background-color: #faa; }
+
+.highlight .ge { font-style: italic; }
+
+.highlight .gr { color: #f07178; }
+
+.highlight .gh { color: #999; }
+
+.highlight .gi { color: #000; background-color: #dfd; }
+
+.highlight .gi .x { color: #000; background-color: #afa; }
+
+.highlight .go { color: #888; }
+
+.highlight .gp { color: #555; }
+
+.highlight .gs { font-weight: bold; }
+
+.highlight .gu { color: #aaa; }
+
+.highlight .gt { color: #f07178; }
+
+.highlight .kc { font-weight: bold; }
+
+.highlight .kd { font-weight: bold; }
+
+.highlight .kp { font-weight: bold; }
+
+.highlight .kr { font-weight: bold; }
+
+.highlight .kt { color: #ffcb6b; font-weight: bold; }
+
+.highlight .m { color: #f78c6c; }
+
+.highlight .s { color: #c3e88d; }
+
+.highlight .na { color: #008080; }
+
+.highlight .nb { color: #eeffff; }
+
+.highlight .nc { color: #ffcb6b; font-weight: bold; }
+
+.highlight .no { color: #008080; }
+
+.highlight .ni { color: #800080; }
+
+.highlight .ne { color: #900; font-weight: bold; }
+
+.highlight .nf { color: #82aaff; font-weight: bold; }
+
+.highlight .nn { color: #555; }
+
+.highlight .nt { color: #ffcb6b; }
+
+.highlight .nv { color: #eeffff; }
+
+.highlight .ow { font-weight: bold; }
+
+.highlight .w { color: #eeffff; }
+
+.highlight .mf { color: #f78c6c; }
+
+.highlight .mh { color: #f78c6c; }
+
+.highlight .mi { color: #f78c6c; }
+
+.highlight .mo { color: #f78c6c; }
+
+.highlight .sb { color: #c3e88d; }
+
+.highlight .sc { color: #c3e88d; }
+
+.highlight .sd { color: #c3e88d; }
+
+.highlight .s2 { color: #c3e88d; }
+
+.highlight .se { color: #eeffff; }
+
+.highlight .sh { color: #c3e88d; }
+
+.highlight .si { color: #c3e88d; }
+
+.highlight .sx { color: #c3e88d; }
+
+.highlight .sr { color: #c3e88d; }
+
+.highlight .s1 { color: #c3e88d; }
+
+.highlight .ss { color: #c3e88d; }
+
+.highlight .bp { color: #999; }
+
+.highlight .vc { color: #ffcb6b; }
+
+.highlight .vg { color: #eeffff; }
+
+.highlight .vi { color: #eeffff; }
+
+.highlight .il { color: #f78c6c; }
 
 /*# sourceMappingURL=post.css.map */
