--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -9,3 +9,13 @@ body {
 * {
   box-sizing: border-box;
 }
+
+blockquote {
+  color: #828282;
+  border-left: 4px solid #e8e8e8;
+  font-size: 1rem;
+  letter-spacing: -1px;
+  font-style: italic;
+  margin: 0;
+  padding: 0 0 0 15px;
+}
