--- a/docs/css/home.css
+++ b/docs/css/home.css
@@ -2,6 +2,8 @@ html, body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; font-size
 
 * { box-sizing: border-box; }
 
+blockquote { color: #828282; border-left: 4px solid #e8e8e8; font-size: 1rem; letter-spacing: -1px; font-style: italic; margin: 0; padding: 0 0 0 15px; }
+
 .header { border-bottom: 2px solid #3f51b5; background-color: #3f51b5; height: 25vh; }
 
 .header .nav-wrap { display: flex; flex-direction: column; }
@@ -19,3 +21,5 @@ html, body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; font-size
 .post .title { font-size: 1.3rem; margin-bottom: 1rem; }
 
 .post .description { font-size: 1rem; margin-bottom: 1rem; }
+
+/*# sourceMappingURL=home.css.map */
