--- a/docs/css/post.css
+++ b/docs/css/post.css
@@ -2,6 +2,8 @@ html, body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; font-size
 
 * { box-sizing: border-box; }
 
+blockquote { color: #828282; border-left: 4px solid #e8e8e8; font-size: 1rem; letter-spacing: -1px; font-style: italic; margin: 0; padding: 0 0 0 15px; }
+
 .min-header { background-color: #3f51b5; height: 48px; }
 
 .min-header .nav-wrap { display: flex; flex-direction: row; justify-content: space-between; align-items: center; height: 100%; }
@@ -12,37 +14,29 @@ html, body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; font-size
 
 .min-header .nav-wrap .links a { color: white; margin-right: 1rem; }
 
-.post-wrap { display: flex; justify-content: space-between; }
+pre, code { font-size: 0.9375em; border-radius: 3px; background-color: #eeeeff; }
 
-.post-wrap .external, .post-wrap .navigation { max-width: 250px; width: 250px; }
+code { padding: 1px 5px; }
 
-.post-wrap .article { max-width: 800px; text-align: justify; }
+pre { padding: 8px 12px; overflow-x: auto; }
 
-.post-wrap .article img { width: 100%; }
+pre > code { border: 0; padding-right: 0; padding-left: 0; }
 
-.post-wrap .article-content { margin-top: 2rem; }
+.highlight .c { color: #998; font-style: italic; }
 
-.post-wrap .date-time { font-style: italic; }
+.highlight .err { color: #a61717; background-color: #e3d2d2; }
 
-.highlight { border-radius: 3px; background: #212121; }
-
-.highlighter-rouge .highlight { background: #212121; }
-
-.highlight .c { color: #545454; font-style: italic; }
-
-.highlight .err { color: #f07178; background-color: #e3d2d2; }
-
-.highlight .k { color: #89ddff; font-weight: bold; }
+.highlight .k { font-weight: bold; }
 
 .highlight .o { font-weight: bold; }
 
-.highlight .cm { color: #545454; font-style: italic; }
+.highlight .cm { color: #998; font-style: italic; }
 
-.highlight .cp { color: #545454; font-weight: bold; }
+.highlight .cp { color: #999; font-weight: bold; }
 
-.highlight .c1 { color: #545454; font-style: italic; }
+.highlight .c1 { color: #998; font-style: italic; }
 
-.highlight .cs { color: #545454; font-weight: bold; font-style: italic; }
+.highlight .cs { color: #999; font-weight: bold; font-style: italic; }
 
 .highlight .gd { color: #000; background-color: #fdd; }
 
@@ -50,7 +44,7 @@ html, body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; font-size
 
 .highlight .ge { font-style: italic; }
 
-.highlight .gr { color: #f07178; }
+.highlight .gr { color: #a00; }
 
 .highlight .gh { color: #999; }
 
@@ -66,7 +60,7 @@ html, body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; font-size
 
 .highlight .gu { color: #aaa; }
 
-.highlight .gt { color: #f07178; }
+.highlight .gt { color: #a00; }
 
 .highlight .kc { font-weight: bold; }
 
@@ -76,17 +70,17 @@ html, body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; font-size
 
 .highlight .kr { font-weight: bold; }
 
-.highlight .kt { color: #ffcb6b; font-weight: bold; }
+.highlight .kt { color: #458; font-weight: bold; }
 
-.highlight .m { color: #f78c6c; }
+.highlight .m { color: #099; }
 
-.highlight .s { color: #c3e88d; }
+.highlight .s { color: #d14; }
 
 .highlight .na { color: #008080; }
 
-.highlight .nb { color: #eeffff; }
+.highlight .nb { color: #0086b3; }
 
-.highlight .nc { color: #ffcb6b; font-weight: bold; }
+.highlight .nc { color: #458; font-weight: bold; }
 
 .highlight .no { color: #008080; }
 
@@ -94,56 +88,68 @@ html, body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; font-size
 
 .highlight .ne { color: #900; font-weight: bold; }
 
-.highlight .nf { color: #82aaff; font-weight: bold; }
+.highlight .nf { color: #900; font-weight: bold; }
 
 .highlight .nn { color: #555; }
 
-.highlight .nt { color: #ffcb6b; }
+.highlight .nt { color: #000080; }
 
-.highlight .nv { color: #eeffff; }
+.highlight .nv { color: #008080; }
 
 .highlight .ow { font-weight: bold; }
 
-.highlight .w { color: #eeffff; }
+.highlight .w { color: #bbb; }
 
-.highlight .mf { color: #f78c6c; }
+.highlight .mf { color: #099; }
 
-.highlight .mh { color: #f78c6c; }
+.highlight .mh { color: #099; }
 
-.highlight .mi { color: #f78c6c; }
+.highlight .mi { color: #099; }
 
-.highlight .mo { color: #f78c6c; }
+.highlight .mo { color: #099; }
 
-.highlight .sb { color: #c3e88d; }
+.highlight .sb { color: #d14; }
 
-.highlight .sc { color: #c3e88d; }
+.highlight .sc { color: #d14; }
 
-.highlight .sd { color: #c3e88d; }
+.highlight .sd { color: #d14; }
 
-.highlight .s2 { color: #c3e88d; }
+.highlight .s2 { color: #d14; }
 
-.highlight .se { color: #eeffff; }
+.highlight .se { color: #d14; }
 
-.highlight .sh { color: #c3e88d; }
+.highlight .sh { color: #d14; }
 
-.highlight .si { color: #c3e88d; }
+.highlight .si { color: #d14; }
 
-.highlight .sx { color: #c3e88d; }
+.highlight .sx { color: #d14; }
 
-.highlight .sr { color: #c3e88d; }
+.highlight .sr { color: #009926; }
 
-.highlight .s1 { color: #c3e88d; }
+.highlight .s1 { color: #d14; }
 
-.highlight .ss { color: #c3e88d; }
+.highlight .ss { color: #990073; }
 
 .highlight .bp { color: #999; }
 
-.highlight .vc { color: #ffcb6b; }
+.highlight .vc { color: #008080; }
 
-.highlight .vg { color: #eeffff; }
+.highlight .vg { color: #008080; }
 
-.highlight .vi { color: #eeffff; }
+.highlight .vi { color: #008080; }
 
-.highlight .il { color: #f78c6c; }
+.highlight .il { color: #099; }
+
+.post-wrap { display: flex; justify-content: space-between; }
+
+.post-wrap .external, .post-wrap .navigation { max-width: 250px; width: 250px; }
+
+.post-wrap .article { max-width: 800px; text-align: justify; }
+
+.post-wrap .article img { width: 100%; }
+
+.post-wrap .article-content { margin-top: 2rem; }
+
+.post-wrap .date-time { font-style: italic; }
 
 /*# sourceMappingURL=post.css.map */
