Update light hosue suggestions

--- a/_includes/min-header.html
+++ b/_includes/min-header.html
@@ -4,8 +4,8 @@
       <a href="/">Bits and Bytes</a>
     </div>
     <div class="links">
-      <a href="{{site.youTube}}" target="_blank">YouTube</a>
-      <a href="{{site.gitHub}}" target="_blank">GitHub</a>
+      <a href="{{site.youTube}}" rel="noopener" target="_blank">YouTube</a>
+      <a href="{{site.gitHub}}" rel="noopener" target="_blank">GitHub</a>
     </div>
   </nav>
 </header>
