--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
   <nav>
     <div class="nav-wrap">
       <div class="links">
-        <a href="{{site.youTube}}" target="_blank">YouTube</a>
-        <a href="{{site.gitHub}}" target="_blank">GitHub</a>
+        <a href="{{site.youTube}}" rel="noopener" target="_blank">YouTube</a>
+        <a href="{{site.gitHub}}" rel="noopener" target="_blank">GitHub</a>
       </div>
       <div class="title">Bits and Bytes</div>
     </div>
