--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="{{page.description}}" />
     <title>{{page.title}}</title>
     {% include google-font.html %} <link rel="stylesheet" href="{{ "/css/post.css" | relative_url }}">
   </head>
