--- a/css/home.scss
+++ b/css/home.scss
@@ -16,6 +16,9 @@
   padding: 1rem;
   margin: 0 1rem 1rem 0;
   max-width: 29%;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 1px 1px 1px 0.5px #ccc, -1px -1px 1px 0.5px #ccc;
   .title {
     font-size: 1.3rem;
     margin-bottom: 1rem;
@@ -23,5 +26,13 @@
   .description {
     font-size: 1rem;
     margin-bottom: 1rem;
+    flex-grow: 1;
+  }
+  .tag {
+    background-color: #ccc;
+    padding: 8px;
+    border-radius: 16px;
+    font-size: 0.9rem;
+    font-style: italic;
   }
 }
