Disqus configuration update

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@
     <div id="disqus_thread"></div>
     <script>
       var disqus_config = function () {
-        this.page.url = '{{page.url}}';
+        this.page.url = 'https://blog.learnbitsandbytes.com/' + '{{page.url}}';
         this.page.identifier = '{{page.id}}';
       };
 
