Update font size and line height

--- a/css/post.scss
+++ b/css/post.scss
@@ -23,6 +23,8 @@
   }
   .article-content {
     margin-top: 2rem;
+    font-size: 1.3rem;
+    line-height: 2.6rem;
   }
   .date-time {
     font-style: italic;
