--- a/docs/css/post.css
+++ b/docs/css/post.css
@@ -2,7 +2,7 @@ html, body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; font-size
 
 * { box-sizing: border-box; }
 
-blockquote { color: #828282; border-left: 4px solid #e8e8e8; font-size: 1rem; letter-spacing: -1px; font-style: italic; margin: 0; padding: 0 0 0 15px; }
+blockquote { color: #828282; border-left: 4px solid #e8e8e8; letter-spacing: -1px; font-style: italic; margin: 0; padding: 0 0 0 15px; }
 
 .min-header { background-color: #3f51b5; height: 48px; }
 
@@ -148,7 +148,7 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 
 .post-wrap .article img { width: 100%; }
 
-.post-wrap .article-content { margin-top: 2rem; }
+.post-wrap .article-content { margin-top: 2rem; font-size: 1.3rem; line-height: 2.6rem; }
 
 .post-wrap .date-time { font-style: italic; }
 
