--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,8 @@
     <meta name="description" content="{{page.description}}" />
     <title>{{page.title}}</title>
     {% include google-font.html %} <link rel="stylesheet" href="{{ "/css/post.css" | relative_url }}">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5222307304042215"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     {% include min-header.html %}
