--- a/docs/css/home.css
+++ b/docs/css/home.css
@@ -4,7 +4,7 @@ html, body { margin: 0; padding: 0; font-family: 'Roboto', sans-serif; font-size
 
 blockquote { color: #828282; border-left: 4px solid #e8e8e8; letter-spacing: -1px; font-style: italic; margin: 0; padding: 0 0 0 15px; }
 
-.header { border-bottom: 2px solid #3f51b5; background-color: #3f51b5; height: 25vh; }
+.header { border-bottom: 2px solid #3f51b5; background-color: #3f51b5; }
 
 .header .nav-wrap { display: flex; flex-direction: column; }
 
@@ -12,11 +12,17 @@ blockquote { color: #828282; border-left: 4px solid #e8e8e8; letter-spacing: -1p
 
 .header .nav-wrap .links a { color: white; margin-left: 16px; }
 
-.header .nav-wrap .title { font-size: 4rem; color: white; padding: 8px; text-align: center; }
+.header .nav-wrap .title { font-size: 2.5rem; color: white; margin: 1rem 0 1rem 0; text-align: center; }
 
-.post-wrap { margin: 24px 48px 24px 48px; display: flex; flex-wrap: wrap; }
+@media (min-width: 992px) { .header .nav-wrap .title { font-size: 4rem; } }
 
-.post { border: 1px solid #ccc; border-radius: 8px; padding: 1rem; margin: 0 1rem 1rem 0; max-width: 29%; display: flex; flex-direction: column; box-shadow: 1px 1px 1px 0.5px #ccc, -1px -1px 1px 0.5px #ccc; }
+.post-wrap { margin: 1rem; display: flex; flex-direction: column; }
+
+@media (min-width: 992px) { .post-wrap { margin: 1.5rem 3rem 1.5rem 3rem; flex-direction: row; flex-wrap: wrap; } }
+
+.post { border: 1px solid #ccc; border-radius: 8px; padding: 1rem; display: flex; flex-direction: column; box-shadow: 1px 1px 1px 0.5px #ccc, -1px -1px 1px 0.5px #ccc; margin-bottom: 1rem; }
+
+@media (min-width: 992px) { .post { max-width: 29%; margin: 0 1rem 1rem 0; } }
 
 .post .title { font-size: 1.3rem; margin-bottom: 1rem; }
 
