Update card box shadow

--- a/docs/css/home.css
+++ b/docs/css/home.css
@@ -20,7 +20,7 @@ blockquote { color: #828282; border-left: 4px solid #e8e8e8; letter-spacing: -1p
 
 @media (min-width: 992px) { .post-wrap { margin: 1.5rem 3rem 1.5rem 3rem; flex-direction: row; flex-wrap: wrap; } }
 
-.post { border: 1px solid #ccc; border-radius: 8px; padding: 1rem; display: flex; flex-direction: column; box-shadow: 1px 1px 1px 0.5px #ccc, -1px -1px 1px 0.5px #ccc; margin-bottom: 1rem; }
+.post { border: 1px solid #ccc; border-radius: 8px; padding: 1rem; display: flex; flex-direction: column; box-shadow: 0px 1px 2px 0px rgba(60, 64, 67, 0.3), 0px 2px 6px 2px rgba(60, 64, 67, 0.15); margin-bottom: 1rem; }
 
 @media (min-width: 992px) { .post { max-width: 29%; margin: 0 1rem 1rem 0; } }
 
