--- a/css/home.scss
+++ b/css/home.scss
@@ -22,7 +22,7 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  box-shadow: 1px 1px 1px 0.5px #ccc, -1px -1px 1px 0.5px #ccc;
+  box-shadow: 0px 1px 2px 0px rgba(60, 64, 67, 0.3), 0px 2px 6px 2px rgba(60, 64, 67, 0.15);
   margin-bottom: 1rem;
   @media (min-width: $desktop-breakpoint) {
     max-width: 29%;
