--- a/docs/css/post.css
+++ b/docs/css/post.css
@@ -154,4 +154,6 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 
 .post-wrap .date-time { font-style: italic; }
 
+.video-container { text-align: center; }
+
 /*# sourceMappingURL=post.css.map */
