--- a/_sass/code-block.scss
+++ b/_sass/code-block.scss
@@ -1,11 +1,10 @@
 $code-background-color: #eeeeff !default;
 pre,
 code {
-  // font-family: $code-font-family;
   font-size: 0.9375em;
-  // border: 1px solid $border-color-01;
   border-radius: 3px;
   background-color: $code-background-color;
+  line-height: 2rem;
 }
 
 code {
