Update home layout

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@
         <div class="description">{{post.description}}</div>
         <div class="tags">
           {% for tag in post.tags %}
-          <span class="tag">{{tag}}</span>
+          <div class="tag">{{tag}}</div>
           {% endfor %}
         </div>
       </div>
