--- a/css/home.scss
+++ b/css/home.scss
@@ -4,44 +4,81 @@
 @import 'base';
 @import 'header';
 
-.post-wrap {
-  margin: 1rem;
-  display: flex;
-  flex-direction: column;
+// .post-wrap {
+//   margin: 1rem;
+//   display: flex;
+//   flex-direction: column;
 
+//   @media (min-width: $desktop-breakpoint) {
+//     margin: 1.5rem 3rem 1.5rem 3rem;
+//     flex-direction: row;
+//     flex-wrap: wrap;
+//   }
+// }
+
+// .post {
+//   border: 1px solid #ccc;
+//   border-radius: 8px;
+//   padding: 1rem;
+//   display: flex;
+//   flex-direction: column;
+//   box-shadow: 0px 1px 2px 0px rgba(60, 64, 67, 0.3), 0px 2px 6px 2px rgba(60, 64, 67, 0.15);
+//   margin-bottom: 1rem;
+//   @media (min-width: $desktop-breakpoint) {
+//     max-width: 29%;
+//     margin: 0 1rem 1rem 0;
+//   }
+//   .title {
+//     font-size: 1.3rem;
+//     margin-bottom: 1rem;
+//   }
+//   .description {
+//     font-size: 1rem;
+//     margin-bottom: 1rem;
+//     flex-grow: 1;
+//   }
+//   .tag {
+//     background-color: #ccc;
+//     padding: 8px;
+//     border-radius: 16px;
+//     font-size: 0.9rem;
+//     font-style: italic;
+//   }
+// }
+.post-wrap {
+  display: grid;
+  gap: 1rem;
+  padding: 1rem;
   @media (min-width: $desktop-breakpoint) {
-    margin: 1.5rem 3rem 1.5rem 3rem;
-    flex-direction: row;
-    flex-wrap: wrap;
+    padding: 2rem;
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
 .post {
+  padding: 0.5rem;
   border: 1px solid #ccc;
   border-radius: 8px;
-  padding: 1rem;
   display: flex;
   flex-direction: column;
-  box-shadow: 0px 1px 2px 0px rgba(60, 64, 67, 0.3), 0px 2px 6px 2px rgba(60, 64, 67, 0.15);
-  margin-bottom: 1rem;
-  @media (min-width: $desktop-breakpoint) {
-    max-width: 29%;
-    margin: 0 1rem 1rem 0;
-  }
-  .title {
-    font-size: 1.3rem;
-    margin-bottom: 1rem;
-  }
-  .description {
-    font-size: 1rem;
-    margin-bottom: 1rem;
-    flex-grow: 1;
-  }
-  .tag {
-    background-color: #ccc;
-    padding: 8px;
-    border-radius: 16px;
-    font-size: 0.9rem;
-    font-style: italic;
-  }
+}
+
+.title {
+  font-size: 1.3rem;
+}
+
+.description {
+  font-size: 1.3rem;
+  margin: 1rem 0;
+  flex-grow: 1;
+}
+.tags {
+  display: flex;
+}
+.tag {
+  padding: 0.5rem 1rem;
+  margin-right: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 1.5rem;
+  background-color: #ccc;
 }
